--- a/index.html
+++ b/index.html
@@ -10,11 +10,76 @@
     <link rel="stylesheet" href="style.css"/>
 
     <title>Mis Datos</title>
+
+
 </head>
 
 <body>
+
+  
+    <h1>Meme</h1>
     <!---Bundle sacado de Boostrap-->
-    <script src="bootstrap.min.js"></script>
+        <script src="bootstrap.min.js"></script>
+
+<p>texto sobre mi corte áreas de interés, estudios, experiencias.</p>
+
+<!--columnas-->
+<div class="container">
+    <div class="row align-items-start">
+      <div class=col-sm-20>
+        <!---imagen CARDS-->
+        <div class="card" style="width: 18rem;">
+            <img src="perro_compu.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+      </div>
+
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+
+            <img src="perro_compu.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+      </div>
+
+      <div class="col">
+      <div class="card" style="width: 18rem;">
+  <img src="perro_compu.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  </div>
+
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col">
+        One of44444 three columns
+      </div>
+      <div class="col">
+        One of th55555e columns
+      </div>
+      <div class="col">
+        One of three c6666666olumns
+      </div>
+    </div>
+    <div class="row align-items-end">
+      <div class="col">
+        One of three columns777777
+      </div>
+      <div class="col">
+        One of three columns8888888
+      </div>
+      <div class="col">
+        One of three columns99999999
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
