--- a/index.html
+++ b/index.html
@@ -1,85 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--- CSS sacado de boostrap -->
-    <link rel="stylesheet" href="bootstrap.min.css"/>
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <!--esto agregué yo nomás a ver-->
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
 
     <title>Mis Datos</title>
+  </head>
 
-
-</head>
-
-<body>
-
-  
-    <h1>Meme</h1>
-    <!---Bundle sacado de Boostrap-->
-        <script src="bootstrap.min.js"></script>
-
-<p>texto sobre mi corte áreas de interés, estudios, experiencias.</p>
-
-<!--columnas-->
-<div class="container">
-    <div class="row align-items-start">
-      <div class=col-sm-20>
-        <!---imagen CARDS-->
-        <div class="card" style="width: 18rem;">
-            <img src="perro_compu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-      </div>
-
-      <div class="col">
-        <div class="card" style="width: 18rem;">
-
-            <img src="perro_compu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-      </div>
-
-      <div class="col">
-      <div class="card" style="width: 18rem;">
-  <img src="perro_compu.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  </div>
-
+  <body class="row justify-content-center align-content-center vh-100">
+    <!--inicio tarjeta-->
+    <div class="col-sm-3">
+      <div class="card">
+        <img src="perro_compu.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Meme Liebana</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a
+            href="https://github.com/Popliteo"
+            class="buttonPropio githubButton"
+            >GitHub</a
+          >
+        </div>
       </div>
     </div>
-    <div class="row align-items-center">
-      <div class="col">
-        One of44444 three columns
-      </div>
-      <div class="col">
-        One of th55555e columns
-      </div>
-      <div class="col">
-        One of three c6666666olumns
-      </div>
-    </div>
-    <div class="row align-items-end">
-      <div class="col">
-        One of three columns777777
-      </div>
-      <div class="col">
-        One of three columns8888888
-      </div>
-      <div class="col">
-        One of three columns99999999
+    <!--fin tarjeta-->
+    <!--inicio tarjeta-->
+    <div class="col-sm-3">
+      <div class="card">
+        <img src="perro_compu.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Meme Liebana</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a
+            href="https://github.com/Popliteo"
+            class="buttonPropio vimeobButton"
+            >Viemo</a
+          >
+        </div>
       </div>
     </div>
-  </div>
-
-</body>
-
+    <!--fin tarjeta-->
+    <!--inicio tarjeta-->
+    <div class="col-sm-3">
+      <div class="card">
+        <img src="perro_compu.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Meme Liebana</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a
+            href="https://github.com/Popliteo"
+            class="buttonPropio behanceButton"
+            >Behance</a
+          >
+        </div>
+      </div>
+    </div>
+    <!--fin tarjeta-->
+  </body>
 </html>
